--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,9 @@
           <button class="search-btn" type="submit">Search</button>
         </form>
         <ul class="gallery js-gallery"></ul>
+        <button class="load-more js-load-more is-hidden" type="button">
+          Load more
+        </button>
         <span class="loader is-hidden js-loader"></span>
       </div>
     </section>
